# qdns

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  vcpkg-configuration.json  vcpkg.json
.github/instructions/: copilot.instructions.md
scripts/: .prettierrc  dns.js  dns.ts  package-lock.json  package.json  tsconfig.json
src/: app_config.cpp  app_config.hpp  build_info.hpp.in  client.cpp  dns.hpp  logging.cpp  logging.hpp  main.cpp  store.hpp  util.hpp
test/: test_main.cpp
